istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  #   tls:
  #     httpsRedirect: true
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   hosts:
  #   - "*"
  #   tls:
  #     mode: SIMPLE
  #     privateKey: /etc/istio/ingressgateway-certs/tls.key
  #     serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
